syntax = "proto3";
package cOKC;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/trylotus/connector/okc/smart-contracts/cOKC";

message Approval {

  google.protobuf.Timestamp ts = 1;
  uint64 block = 2;
  uint64 idx = 3;
  bytes tx = 4; // tx hash
  bytes owner = 5;
  bytes spender = 6;
  bytes value = 7;
}

message MintClaimed {

    google.protobuf.Timestamp ts = 1;
    uint64 block = 2;
    uint64 idx = 3;
    bytes tx = 4; // tx hash
    bytes user = 5;
    bytes rewardAmount = 6;
}

message RankClaimed {

    google.protobuf.Timestamp ts = 1;
    uint64 block = 2;
    uint64 idx = 3;
    bytes tx = 4; // tx hash
    bytes user = 5;
    bytes term = 6;
    bytes rank = 7;
}

message Staked {

    google.protobuf.Timestamp ts = 1;
    uint64 block = 2;
    uint64 idx = 3;
    bytes tx = 4; // tx hash
    bytes user = 5;
    bytes amount = 6;
    bytes term = 7;
}

message Transfer {

    google.protobuf.Timestamp ts = 1;
    uint64 block = 2;
    uint64 idx = 3;
    bytes tx = 4; // tx hash
    bytes from = 5;
    bytes to = 6;
    bytes value = 7;
}

message Withdrawn {

    google.protobuf.Timestamp ts = 1;
    uint64 block = 2;
    uint64 idx = 3;
    bytes tx = 4; // tx hash
    bytes user = 5;
    bytes amount = 6;
    bytes reward = 7;
}